--- a/GlucoMan.Mobile/GlucoMan.Mobile/FoodsPage.xaml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/FoodsPage.xaml
@@ -14,7 +14,6 @@
                 <RowDefinition Height="20"/>
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="50"/>
-                <RowDefinition Height="20"/>
                 <RowDefinition />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
@@ -65,27 +64,30 @@
                     Clicked="btnSaveFood_Click"></Button>
             <Button Grid.Row="7" Grid.Column="1" Text="Details" x:Name="btnFoodDetails" 
                     Clicked="btnFoodDetails_Click"></Button>
+            <Button Grid.Row="7" Grid.Column="2" Text="Clean Fields" x:Name="btnCleanFields" 
+                    Clicked="btnCleanFields_Click"></Button>
             <Button Grid.Row="7" Grid.Column="3" Text="Search" x:Name="btnSearchFood" 
                     Clicked="btnSearchFood_Click"></Button>
 
-            <Label Grid.Row="8" Grid.Column="0" Text="XXXX" XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="8" Grid.Column="1" Text="XXXX" XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="8" Grid.Column="2" Text="XXXX" XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="8" Grid.Column="3" Text="XXXX" XAlign="Center" YAlign="End"/>
-
-            <ListView Grid.ColumnSpan="4" x:Name="gridFoods" ItemsSource="{Binding}"
+            <ListView Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="4" x:Name="gridFoods" ItemsSource="{Binding}"
                     ItemSelected="OnGridSelectionAsync">
                 <!-- description of data to be shown, in a DataTemplate -->
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
                             <ViewCell.View>
-                                <Grid Margin="10">
+                                <Grid Margin="8">
                                     <Grid.RowDefinitions>
-                                        <RowDefinition Height="18"/>
+                                        <RowDefinition Height="20"/>
                                     </Grid.RowDefinitions>
-                                    <Label HorizontalTextAlignment="Center" Grid.Column="0" Text="{Binding Name}"/>
-                                    <Label HorizontalTextAlignment="Center" Grid.Column="1" Text="{Binding Cho.Text}"/>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="150"/>
+                                        <ColumnDefinition />
+                                        <ColumnDefinition Width="35"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Label HorizontalTextAlignment="Start" Grid.Column="0" Text="{Binding Name}" />
+                                    <Label HorizontalTextAlignment="Center" Grid.Column="1" Text="{Binding Description}"/>
+                                    <Label HorizontalTextAlignment="Center" Grid.Column="2" Text="{Binding Cho.Text}"/>
                                 </Grid>
                             </ViewCell.View>
                         </ViewCell>
