v. 0.7.0.0 Fixed some small issues. Works accettably in both platforms. Compiled releases (.apk in Android) nonlw

--- a/GlucoMan.Mobile/GlucoMan.Mobile/FoodsPage.xaml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/FoodsPage.xaml
@@ -86,7 +86,7 @@
                                         <ColumnDefinition Width="35"/>
                                     </Grid.ColumnDefinitions>
                                     <Label HorizontalTextAlignment="Start" Grid.Column="0" Text="{Binding Name}" />
-                                    <Label HorizontalTextAlignment="Center" Grid.Column="1" Text="{Binding Description}"/>
+                                    <Label HorizontalTextAlignment="Start" Grid.Column="1" Text="{Binding Description}"/>
                                     <Label HorizontalTextAlignment="Center" Grid.Column="2" Text="{Binding Cho.Text}"/>
                                 </Grid>
                             </ViewCell.View>
