--- a/GlucoMan.Mobile/GlucoMan.Mobile/FoodsPage.xaml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/FoodsPage.xaml
@@ -13,7 +13,7 @@
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="20"/>
                 <RowDefinition Height="50"/>
-                <RowDefinition Height="50"/>
+                <RowDefinition Height="60"/>
                 <RowDefinition />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
@@ -37,7 +37,7 @@
                     IsReadOnly="true"/>
             <Entry Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" 
                     x:Name="txtName" BackgroundColor="LightGreen" 
-                    Keyboard="Text"
+                    Keyboard="Text" TextChanged="txtName_TextChanged"
                     FontSize="Medium" HorizontalTextAlignment="Center" 
                     IsReadOnly="false"/>
             <Button Grid.Row="2" Grid.Column="3" x:Name="btnChoose" Text="Choose" 
@@ -48,7 +48,7 @@
 
             <Entry Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="4" 
                     x:Name="txtDescription" BackgroundColor="White"
-                    Keyboard="Text"
+                    Keyboard="Text" TextChanged="txtDescription_TextChanged"
                     FontSize="Medium" HorizontalTextAlignment="End"/>
 
             <Label Grid.Row="5" Grid.Column="0" Text="CHO [g]%" XAlign="Center" YAlign="End"/>
