--- a/GlucoMan.Mobile/GlucoMan.Mobile/InsulinCalcPage.xaml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/InsulinCalcPage.xaml
@@ -46,9 +46,9 @@
             <Label Grid.Row="4" Grid.Column="0" x:Name="txtTdd" Text="----" XAlign="Center" YAlign="Center"/>
             <Entry Grid.Row="4" Grid.Column="1" x:Name="txtInsulinCorrectionSensitivity" HorizontalTextAlignment ="End" Text="" 
                    Keyboard="Numeric" Placeholder="mg/dl" BackgroundColor="PaleGoldenrod" />
-            <Button Grid.Row="4" Grid.Column="3" x:Name="btnSetParameters" Text="Set param."
+            <Button Grid.Row="4" Grid.Column="2" x:Name="btnSetParameters" Text="Set param."
                     Clicked="btnSetParameters_Click"/>
-            
+
             <Label Grid.Row="5" Grid.Column="0" Text="Premeal Gluc" XAlign="Center" YAlign="End"/>
             <Label Grid.Row="5" Grid.Column="1" Text="Target Gluc" XAlign="Center" YAlign="End"/>
             <Label Grid.Row="5" Grid.Column="2" Text="Gl. to correct" XAlign="Center" YAlign="End"/>
@@ -69,9 +69,11 @@
                         x:Name="btnReadGlucose" Clicked="btnReadGlucose_Click" />
             <Button Grid.Row="7" Grid.Column="2" Text="Round" 
                         x:Name="btnRoundInsulin" Clicked="btnRoundInsulin_Click" />
-            <Button Grid.Row="7" Grid.Column="3"  Text="Save" 
+            <Button Grid.Row="7" Grid.Column="1"  Text="Save" IsEnabled="False" 
                         x:Name="btnSaveBolus" Clicked="btnSaveBolus_Click" />
-                
+            <Button Grid.Row="7" Grid.Column="3" x:Name="btnReadCho" Text="Read"
+                    Clicked="btnReadCho_Click"/>
+            
             <Label Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="4" Text="Type of meal" 
                    XAlign="Center" YAlign="Center"/>
             
